fixed unnecessary padding which caused horizontal scrollbars to appear

--- a/css/stijl.css
+++ b/css/stijl.css
@@ -51,8 +51,13 @@ body {
 .greengray {
   background-color: #718067;
 }
+.col-sm-12 {
+  padding: 0;
+}
 .col-sm-4 {
   background: #3C6A5F;
+  padding-left: 0;
+  padding-right: 0;
 }
 .titlebar {
   color: white;
@@ -83,12 +88,18 @@ body {
 }
 
 
+
+
 /* MISC */
 .clear {
   clear: both;
 }
 .centreer {
   text-align: center;
+}
+.row {
+  margin: 0;
+  width: 100%;
 }
 .titlebar h2 {  
   margin: 0;
@@ -100,8 +111,7 @@ body {
   padding-bottom: 10px;
 }
 .col-sm-4 {
-  padding-left: 1px;
-  padding-right: 1px;  
+  
 }
 #wrapper {
   min-height: 100%;
@@ -152,10 +162,13 @@ body {
 /* CONTENT */
 #showcase-content {
   width: 100%;
+  padding: 0;
 }
 .over-mezelf {
-  border: 1px #265046 solid;
+  /*border: 1px #265046 solid;*/
   height: 260px;
+  padding-left: 1px;
+  padding-right: 1px;
 }
 .over-mezelf h2 {
   padding-top: 40px;
@@ -171,6 +184,7 @@ body {
   margin-top: 25px;
   padding-top: 13px;
 }
+
 
 
 
